--- a/helloword.html
+++ b/helloword.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <h1>sitio web encontruccion</h1>
-    <p>Saludos people</p>
+    <p>Saludos people, este curso es nuevo</p>
 </body>
 </html>
